--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> Praticando com variáveis </h1>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
